--- a/google/index.html
+++ b/google/index.html
@@ -3,6 +3,7 @@
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="557887922249-kb96uv32gvml1fevjba6r7t1sgo9gnsm.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
@@ -20,7 +21,18 @@
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
         console.log("ID Token: " + id_token);
-      };
+      }; 
+      function renderButton() {
+      gapi.signin2.render('my-signin2', {
+        'scope': 'profile email',
+        'width': 240,
+        'height': 50,
+        'longtitle': true,
+        'theme': 'dark',
+        'onsuccess': onSuccess,
+        'onfailure': onFailure
+      });
+    }
     </script>
   </body>
 </html>
