--- a/google/render.html
+++ b/google/render.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="557887922249-kb96uv32gvml1fevjba6r7t1sgo9gnsm.apps.googleusercontent.com">
 </head>
 <body>
   <div id="my-signin2"></div>
