--- a/greekify.html
+++ b/greekify.html
@@ -1,3 +1,10 @@
+  
+
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+
+  
+
+
 <input type="text" id="thing">
 <button onclick="asdads()">Click</button>
 <content></content>
