--- a/greekify.html
+++ b/greekify.html
@@ -7,8 +7,8 @@
 
 <input type="text" id="thing">
 <button onclick="asdads()">Click</button>
-<br><br><br><br><br><br><br><br>
-<content></content>
+<br>
+<content style="padding-top: 500px"></content>
 <script>
 String.prototype.replaceAt=function(index, replacement) {
     return this.substr(0, index) + replacement+ this.substr(index + replacement.length);
