--- a/greekify.html
+++ b/greekify.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
-<div class="w3-card-4" style="max-width: 500px;">
+<div class="w3-card-4 w3-center" style="max-width: 500px;">
 
 	<div class="w3-container w3-green">
 	  <h2>Samyok's Greekifier</h2>
@@ -14,7 +14,7 @@
     </div>
 
 </div>
-<div class="w3-card-4" style="max-width: 500px;">
+<div class="w3-card-4 w3-center" style="max-width: 500px;">
 
 	<div class="w3-container w3-green">
       <h2><content></content></h2>
