--- a/cookieclicker.html
+++ b/cookieclicker.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
   <script
-  src="https://code.jquery.com/jquery-3.3.1.slim.js"
-  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
-  crossorigin="anonymous"></script>
+  src="https://code.jquery.com/jquery-3.3.1.js"></script>
   </head> 
   <body> 
     <ul> 
