--- a/color/jscolor-usage.html
+++ b/color/jscolor-usage.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic usage</title>
+    <title>Hex Color Picker</title>
 </head>
 <body>
 
 
 <script src="jscolor.js"></script>
 
-Color: <input class="jscolor" value="ab2567">
-
-
-<p style="margin-top:3em;">Check out <a href="http://jscolor.com/examples/">more examples at jscolor.com</a>!</p>
+Color: <input class="jscolor" value="ab2567" style="padding: 20px;">
 
 
 </body>
